HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/NonModalImplementsModalClass/Expected.uv
//! Expected diagnostic metadata for the NonModalImplementsModalClass rejected-source specimen.

expectedDiagnostic("E-TYP-2401", "req.14.ModalClassImplementationRequiresModalType")
